# CIS4000_Capstone-Spring2024

./: .gitmodules  Cargo.toml  LICENSE  README.md  cis4000_capstone-spring2024.code-workspace  client.code-workspace  game.code-workspace  server.code-workspace
assets/: example.tiled-session  wip map.tmx
certs/: identity.p12  root-ca.der  root-ca.key.pem  root-ca.pem  root-ca.srl  server.key.pem
client/: Cargo.toml  build.sh  test.sh
client/build_deps/: cert.der  cert.pem  generate-certificate.sh  server.key.rsa
client/src/: asset_updater.rs  config.rs  enums.rs  main.rs  map_data.rs  quest_data.rs
client/src/scenes/: inside.rs  login.rs  message_popup.rs  mod.rs  outside.rs  server_select.rs
client/src/ui/: dialog.rs  mod.rs  theme.rs
common/: Cargo.toml
common/src/: conn_lib.rs  lib.rs
server/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  buildWithDocker.sh  compose.yml  test.sh  testDocker.sh
server/src/: OLD_main.rs  auth.rs  auth_error.rs  client_auth.rs  clients_object.rs  data.rs  handle_client.rs  lib.rs  main.rs  main_old.rs  main_v2.rs  mongo.rs  state.rs
server/src/routes/: handle_session_ws.rs  mod.rs  serve_auth.rs  serve_index.rs  static_files.rs
server/src/static/: robots.txt
server/src/static/css/: auth.css  buttons.css  index.css  modal.css  navmenu.css  styles.css
server/src/static/scripts/: auth.js  index.js  navmenu.js
server/src/templates/: auth.html  base.html  index.html  navmenu.html
