[package]
name = "cis4000_capstone-spring2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.4", features = ["audio", "log-rs"] }
macroquad-tiled = "0.2.0"
wasm-sockets = "1.0.0"
