[package]
name = "gwynedd_valley_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# # Singletons
# lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }

# Graphics
macroquad = { version = "0.4.4", features = [ "audio" ] }
macroquad-tiled = "0.2.0"

# WebSocket
tungstenite = { version = "0.21.0", features = [ "rustls", "rustls-tls-webpki-roots", "rustls-tls-native-roots" ] }
url = { version = "2.5.0", features = [ "serde" ] }
# openssl = { version = "0.10.*", features = [ "vendored" ] }

# Utility
serde = "1.0.196"
serde_json = "1.0.113"
anyhow = "1.0.79"
directories = "5.0.1"
include_dir = { version = "0.7.3", features = [] }
git2 = { version = "0.18.2", features = [ "vendored-libgit2", "vendored-openssl" ] }