[package]
name = "gwynedd_valley_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Graphics
macroquad = { version = "0.4.4", features = [ "audio" ] }
macroquad-tiled = "0.2.0"
macroquad-platformer = "0.2.0"
glam = { version = "0.25.0", features = [ "serde" ] }

# Server Connection
tungstenite = { version = "0.21.0", features = [ "native-tls-vendored" ] }
url = { version = "2.5.0", features = [ "serde" ] }
common = { path = "../common" }

# Utility
serde = "1.0.196"
serde_json = "1.0.113"
anyhow = "1.0.79"
directories = "5.0.1"
include_dir = { version = "0.7.3", features = [] }
git2 = { version = "0.18.2", features = [ "vendored-libgit2", "vendored-openssl" ] }
rs_sha3_256 = "0.1.2"