[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing = "0.1.40"

glam = { version = "0.25.0", features = [ "serde" ] }
openssl = { version = "0.10.70", features = [ "vendored" ] }
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
thiserror = "1.0"