[package]
name = "gwynedd_valley_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web-server
tokio = { version = "1.35.*", features = [ "full" ] }
tokio-util = { version = "0.7.*", features = [ "compat", "io", "codec" ] }
axum = { version = "0.7.*", features = [ "http2", "tracing", "json", "macros", "ws" ] }
tera = "1.19.*"
mime_guess = "2.0.*"
lazy_static = "1.4.*"
tower = { version = "0.4.*", features = ["util"] }
tower-http = { version = "0.5.*", features = ["fs", "trace"] }
openssl = { version = "0.10.*", features = ["vendored"] }
# Passkey Auth
webauthn-rs = { version = "0.4.*", features = ["danger-allow-state-serialisation"] }
tower-sessions = { version = "0.10.*", features = [] }
tower-sessions-moka-store = "0.10.0"
tower-cookies = { version = "0.10.*" }
# Mongodb
mongodb = { version = "2.8.*" }
futures = { version = "0.3.*" }
futures-util = "0.3.*"
bson = { version = "2.9.*", features = [ "chrono-0_4", "uuid-1", "serde_with" ] }
# Util
chrono = { version = "0.4.*", features = [ "serde" ] }
uuid = { version = "1.7.*", features = [ "v4", "serde" ] }
serde = { version = "1.0.*", features = [ "derive" ] }
serde_json = "1.0.*"
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
include_dir = "0.7.*"
thiserror = "1.0.*"
