[package]
name = "gwynedd_valley_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = { version = "0.3.30" }
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = [ "full" ] }
tokio-util = { version = "0.7.10", features = [ "compat", "io", "codec" ] }
tokio-tungstenite = { version = "0.21.0", features = [ "rustls", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "tokio-rustls", "webpki-roots" ] }
